--- a/phonegap_front_webApp/www/timetable_page.html
+++ b/phonegap_front_webApp/www/timetable_page.html
@@ -36,7 +36,7 @@
 					<!-- + 버튼  -->
 					<div class="row col-auto justify-content-end setting">
 						<div class= "col-10 col-xs-10 col-sm-10 col-lg-10 col-md-10"></div>
-						<button class="btn-lg btn-add p-0 mx-2 upperbarCollapse" type="button" data-toggle="collapse" data-target="#collapseAdd" aria-label="Left Align" aria-expanded="false" aria-controls="collapseAdd">
+						<button id="plusTime" class="btn-lg btn-add p-0 mx-2" type="button" data-toggle="collapse" data-target="#collapseAdd" aria-label="Left Align" aria-expanded="false" aria-controls="collapseAdd">
 							<span class="fas fa-plus-square"></span>
 						</button>
 					</div>
@@ -47,7 +47,7 @@
 							<div class="list-group">
 
 								<button id="add-by-directly" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseDirect" aria-expanded="false" aria-controls="collapseDirect">직접 추가하기</button>
-								<button id="add-by-searching" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseSearching" aria-expanded="false" aria-controls="collapseSearching">검색하기</button>
+								<button id="add-by-searching" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseSearching" aria-expanded="false" aria-controls="collapseSearching" href="find_subject.html">검색하기</button>
 								<button type="button" id="btn-undo2" class="p-1 btn-sm list-group-item">취소하기</button>
 							</div>
 
@@ -142,99 +142,6 @@
 								</div>
 							</div>
 
-							<!-- 검색하기 창 -->
-							<div class="collapse mt-1 form-add" id="collapseSearching">
-								
-								<div class="card card-body card-directly p-2">
-									<form class="commonForm">
-										<div class="form-group m-0">
-											<label for="subjectName" class="col-12 label">과목명</label>
-											<input type="text" class="form-control input" title="과목명" id="subjectName">
-										</div>
-										<div class="form-group m-0">
-											<label for="professorName" class="col-12 label" >교수명</label>
-											<input type="text" class="form-control input" title="교수명" id="professorName">
-										</div>
-										<div class="form-group m-0">
-											<label for="time" class="col-12 label">시간</label>
-											<div id="time" class="col-12 form-row">
-												<label class="mx-auto time-label">요일</label>
-												<div class="mx-auto">
-													<select id="day1" class="form-control-xs">
-														<option value="">요일</option> 
-														<option value="mon">mon</option> 
-														<option value="tue">tue</option> 
-														<option value="wen">wen</option> 
-														<option value="thu">thu</option> 
-														<option value="fri">fri</option> 
-													</select>
-													<select id="day2" class="form-control-xs">
-														<option value="">요일</option>
-														<option value="none">없음</option>  
-														<option value="mon">mon</option> 
-														<option value="tue">tue</option> 
-														<option value="wen">wen</option> 
-														<option value="thu">thu</option> 
-														<option value="fri">fri</option> 
-													</select>
-												</div>
-												<label class="mx-auto time-label">시작시간</label>
-												<div class="mx-auto">
-													<select id="sHour" class="form-control-xs">
-														<option value="">시</option> 
-														<option value="9">9</option> 
-														<option value="10">10</option> 
-														<option value="11">11</option> 
-														<option value="12">12</option> 
-														<option value="13">13</option> 
-														<option value="14">14</option> 
-														<option value="15">15</option> 
-														<option value="16">16</option>
-														<option value="17">17</option> 
-														<option value="18">18</option>
-													</select> 
-													<select id="sMinute" class="form-control-xs">
-														<option value="">분</option> 
-														<option value="00">00</option> 
-														<option value="30">30</option> 
-													</select> 				
-												</div>
-												<label class="mx-auto time-label">종료시간</label>
-												<div class="mx-auto">
-													<select id="eHour" class="form-control-xs">
-														<option value="">시</option> 
-														<option value="9">9</option> 
-														<option value="10">10</option> 
-														<option value="11">11</option> 
-														<option value="12">12</option> 
-														<option value="13">13</option> 
-														<option value="14">14</option> 
-														<option value="15">15</option> 
-														<option value="16">16</option>
-														<option value="17">17</option> 
-														<option value="18">18</option>
-													</select> 
-													<select id="eMinute" class="form-control-xs">
-														<option value="">분</option> 
-														<option value="00">00</option> 
-														<option value="30">30</option> 
-													</select> 		
-												</div>
-											</div>
-										</div>
-										<div class="form-group m-0">
-											<label for="place" class="col-12 label">장소</label>
-											<input type="text" class="form-control input" title="장소" id="place">
-										</div>
-									</form>
-									<div class="form-row mx-auto btn-submit">
-										<button type="button" id="btn-success" class="mx-auto col-5 btn btn-sm btn-addSub">추가</button>
-										<button type="button" id="btn-undo1" class="mx-auto col-5 btn btn-sm btn-addSub">취소</button>
-									</div>
-								</div>
-
-							</div>
-
 						</div>
 					</div>
 
@@ -258,9 +165,14 @@
 	<!-- 취소하기 버튼 클릭 시 다시 창 닫기 -->
 	<script type="text/javascript">
 		$('#btn-undo2').on('click', function () {
-			$('.upperbarCollapse').trigger('click');
-			$('#add-by-directly').trigger('click');
-			$('#add-by-searching').trigger('click');
+			$('#plusTime').trigger('click');
+			$('#collapseDirect').collapse('hide');
+			
+		});
+		$('#plusTime').on('click', function () {
+			$('#collapseDirect').collapse('hide');
+			$('#collapseAdd').collapse('hide');
+			
 		});
 
 		$('#btn-undo1').on('click', function () {
@@ -349,7 +261,7 @@
 			$('select').find("option:eq(0)").prop("selected", true);
 
 			$('#add-by-directly').trigger('click');
-			$('.upperbarCollapse').trigger('click');
+			$('#plusTime').trigger('click');
 		});
 	</script>
 
