학수번호 보내기와(서버준비필요) 비번 메일로 보내주기 도전중과 회원가입 실패 이유 적음

--- a/phonegap_front_webApp/www/findPW.html
+++ b/phonegap_front_webApp/www/findPW.html
@@ -68,7 +68,8 @@
                if(result['result'] === "no data"){ //회원정보 없음
                   alert('회원정보가 없습니다.');
                }else{
-                  alert("비밀번호 : "+result['result']);
+                  alert("비밀번호 : "+result['pw']);
+                  alert("email : "+result['email']);
                }
             },
             error : function(){
