--- a/phonegap_front_webApp/www/join.html
+++ b/phonegap_front_webApp/www/join.html
@@ -114,7 +114,7 @@
 		            	alert('회원가입 성공');
 		            	location.href = "index.html";
 		            }else{
-		            	alert('회원가입 실패');
+		            	alert('아이디 중복');
 		            }
 		        },
 		        error : function(){
