비번 변경 함!

--- a/phonegap_front_webApp/www/mypage.html
+++ b/phonegap_front_webApp/www/mypage.html
@@ -43,10 +43,10 @@
 					</div>
 
 					<div class="list-group">
-						<button class="btn p-1 btn-sm list-group-item" type="button">정보 수정</button>
-						<button class="btn p-1 btn-sm list-group-item" type="button">비밀번호 변경</button>
-						<button class="btn p-1 btn-sm list-group-item" type="button">알림 끄기</button>
-						<button class="btn p-1 btn-sm list-group-item" type="button">탈퇴</button>
+						<a class="btn p-1 btn-sm list-group-item" type="button">정보 수정</a>
+						<a class="btn p-1 btn-sm list-group-item" type="button" href="changePW.html">비밀번호 변경</a>
+						<a class="btn p-1 btn-sm list-group-item" type="button">알림 끄기</a>
+						<a class="btn p-1 btn-sm list-group-item" type="button">탈퇴</a>
 					</div>
 				</div>
 
