--- a/phonegap_front_webApp/www/assignment.html
+++ b/phonegap_front_webApp/www/assignment.html
@@ -26,30 +26,30 @@
 	<!-- Container -->
 	<div class="container">
 		<div class="row justify-content-md-center justify-content-xs-center row justify-content-sm-center justify-content-lg-center">
-			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login_box ">
 
 				<!-- header (상단바) class="app-header" -->
 				<div id="header"></div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron m-2 p-0 text-white rounded main-area">
+				<div class="jumbotron m-2 p-0 text-white rounded main_area">
 
 					<!--  개인인지 팀플인지,,, 추가 등 설정 버튼들 있는 영역-->
 					<div class="row col-auto justify-content-end setting">
 						<div class= "p-0 col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 							<div class="btn-group" role="group" aria-label="Basic example">
-								<button type="button" class="btn btn-sm btn-assigntype">Team</button>
-								<button type="button" class="btn btn-sm btn-assigntype">Non</button>
+								<button type="button" class="btn btn-sm btn_assign_type">Team</button>
+								<button type="button" class="btn btn-sm btn_assign_type">Non</button>
 							</div>
 						</div>
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
 						</div>
 						<!-- log-out 아이콘 버튼 누르면 assignment_add.html로 이동 -->
 						<div class= "col-4 col-xs-4 col-sm-4 col-lg-4 col-md-4">
-							<a class="btn btn-lg btn-add p-0" aria-label="Left Align" href="assignment_add.html">
+							<a class="btn btn-lg btn_add p-0" aria-label="Left Align" href="assignment_add.html">
 								<span class="fas fa-plus-square"></span>
 							</a>
-							<button class="btn btn-lg btn-add p-0" aria-label="Left Align">
+							<button class="btn btn-lg btn_add p-0" aria-label="Left Align">
 								<span class="fas fa-minus-square"></span>
 							</button>
 						</div>
@@ -57,10 +57,10 @@
 
 					<!-- 과제전체 보여주는 영역(스크롤바 포함) -->
 					<!-- 과제가 여러개 이면 스크롤 생김 -->
-					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 assignment-all scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
+					<div style="overflow:auto; width:auto; height:300px;" class="mt-3 scrollbar scrollbar-track scrollbar-thumb" data-offset="0">
 
 						<!-- 스크롤바 제외한 과제들 보여주는 영역 -->
-						<div id="showAssign" class="px-2">
+						<div class="px-2 content_show_assign">
 							<!-- Modal -->
 							<div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered modal-sm" role="document">
@@ -91,14 +91,14 @@
 			</div>
 		</div>
 	</div>
-	<input type = "hidden" id="hiddenAssign" name = "hide" value = "" >
+	<input type="hidden" id="hiddenAssign" name="hide" value="" >
 </body>
 </html>
 
 <!-- modal-->
 <script type="text/javascript">
 	$(function(){
-		$(document).on("click",'.popbutton_assignment',function() {
+		$(document).on("click",'.btn_pop_assignment',function() {
 			var title = $(this).data('title');
 			var body = '';
 
@@ -171,17 +171,17 @@
 
 						var str = '';
 						str += '<button type="button" ';
-						str += 'class="btn btn-lg btn-block btn-outline-danger popbutton_assignment" ';
+						str += 'class="btn btn-lg btn-block btn-outline-danger btn_pop_assignment" ';
 						str += 'data-due-date= " ' + result['result'][i]['dueDate'] + ' " ';
 						str += 'data-importance= " ' + result['result'][i]['importance'] + ' " ';
 						str += 'data-title= " ' + assign_title + ' " ';
 						str += 'data-assign-no= " ' + result['result'][i]['assignNo'] + ' " ';
 						str += 'data-contents= " ' + assign_contents + '">';
-						str += '<h6 id="assign' + (i+1) + '_title" ';
+						str += '<h6 id="assign' + (i+1) + 'Title" ';
 						str += 'style="font-weight: bold" class="mb-2">-' + assign_title + '</h6>';
-						str += '<p6 id="assign' + (i+1) + '_context">' + assign_contents + '</p6>';
+						str += '<p6 id="assign' + (i+1) + 'Context">' + assign_contents + '</p6>';
 						str += '</button>';
-						$('#showAssign').append(str);
+						$('.content_show_assign').append(str);
 					}
 				}
 
