--- a/phonegap_front_webApp/www/changePW.html
+++ b/phonegap_front_webApp/www/changePW.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <!-- Customize CSS -->
-  <link rel="stylesheet" type="text/css" href="css/style_index.css">
+  <link rel="stylesheet" type="text/css" href="css/style_changePW.css">
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -26,32 +26,33 @@
   <!-- Container -->
   <div class="container" id="content">
     <div class="row justify-content-md-center justify-content-xs-center">
-      <div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-        <h1 class="text-center wdi-red">Login</h1>
+      <div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login_box ">
+        <h1 class="text-center wdi_red">changePW</h1>
         <hr>
         <form>
           <div class="form-row">
 
             <!-- input id, pw -->
             <div class= "col-md-12 col-xs-12">
-             <input type="text" id="id" class="form-control form-control-lg flat-input" placeholder="username">
+             <input type="text" id="id" class="form-control form-control-lg flat_input" placeholder="username">
            </div>
-           <div class= "col-md-12 col-xs-12">
-             <input type="password" id="pw" class="form-control form-control-lg flat-input" placeholder="password" >
+           <div class= "col-md-12 col-xs-12 ">
+             <input type="password" id="pw" class="form-control form-control-lg flat_input" placeholder="password" >
            </div>
-            <div class= "col-md-12 col-xs-12" >
-              <a class="btn btn-lg btn-block btn-login" id = "submit" >
+            <div class= "col-md-12 col-xs-12 mt-3 ">
+              <button class="btn btn-md btn_submit mx-0" id="submit" >
                 확인
-              </a>
+              </button>
+              <button type="button" class="btn btn-md btn_cancel mx-0" id="cancel" onclick="location.href='mypage.html'">
+                취소
+              </button>
             </div>
-
-
 
             <div class="col-md-12 col-xs-12">
-              <input type="password" id="repw" class="form-control form-control-lg flat-input" placeholder="password" style="display:none;" >
+              <input type="password" id="rePw" class="form-control form-control-lg flat_input" placeholder="password" style="display:none;" >
             </div>
             <div class= "col-md-12 col-xs-12" >
-              <a class="btn btn-lg btn-block btn-login" id = "change" style="display:none;">
+              <a class="btn btn-lg btn-block btn_submit" id="change" style="display:none;">
                 변경
               </a>
             </div>
@@ -66,12 +67,15 @@
         $.ajax({
           url: "http://localhost:8090/user/checkUser.json",
           type: "GET",
-          data: {'stuId':$('#id').val(), 'pw':$('#pw').val()},
+          data: {
+            'stuId':$('#id').val(),
+            'pw':$('#pw').val()
+          },
           success: function(result) {
             console.log(result);
-            if (result['result'] === "1") { //회원정보 없음
+            if (result['result'] === "1") { 
               //document.getElementById('pw').style.display="";
-              $('#repw').css('display', '');
+              $('#rePw').css('display', '');
               $('#change').css('display', '');
             } else {
               alert("회원정보 없음");
@@ -87,7 +91,7 @@
         $.ajax({
           url: "http://localhost:8090/user/updatePW.json",
           type: "GET",
-          data: {'stuId':$('#id').val(), 'pw':$('#repw').val()},
+          data: {'stuId':$('#id').val(), 'pw':$('#rePw').val()},
           success: function(result) {
             console.log(result);
             if (result['result'] === "1") { //회원정보 없음
