--- a/phonegap_front_webApp/www/find_subject.html
+++ b/phonegap_front_webApp/www/find_subject.html
@@ -28,35 +28,37 @@
 	<!-- Container -->
 	<div class="container" data-spy = "scroll">
 		<div class="row justify-content-md-center justify-content-xs-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-				<h1 class="text-center m-0 wdi-red">FIND!</h1>
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login_box ">
+				<h1 class="text-center m-0 wdi_red">FIND!</h1>
 				<hr>
-				<div class="jumbotron p-0 rounded main-area">
+				<div class="jumbotron p-0 rounded main_area">
 
 					<div class="form-row m-3">
-						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label">
+						<div class= "col-md-3 col-xs-3 mt-1 mb-1 label_input">
 							과목명
 						</div>
 						<div class= "col-md-7 col-xs-7 ">
-							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" id="subjectName">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat_input" id="subjectName">
 						</div>
 						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
-							<a  class="btn btn-sm btn-icon" aria-label="Left Align">
+							<a  class="btn btn-sm btn_icon" aria-label="Left Align">
 								<span class="fas fa-search" id="click"></span>
 							</a>
 						</div>
-						<table style="overflow:auto;" id="table_findSub" class="table table-borderless table-sm table-time">
+						<table style="overflow:auto;" id="tableFindSub" class="table table-sm table_time">
 							<colgroup>
 								<col width="10%"/>
-								<col width="10%"/>
+								<col width="5%"/>
 								<col width="25%"/>
-								<col width="25%"/>
-								<col width="30%"/>
+								<col width="20%"/>
+								<col width="20%"/>
+								<col width="20%"/>
 							</colgroup>
 							<thead>
 								<tr>
-									<th class="text-center">CK</th>
-									<th class="text-center" style="border-left: 1px solid #e5e5e5;">NO</th>
+									<th class="text-center">NO</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">CK</th>
+									<th class="text-center" style="border-left: 1px solid #e5e5e5;">과목명</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">시간</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">장소</th>
 									<th class="text-center" style="border-left: 1px solid #e5e5e5;">교수명</th>
@@ -67,38 +69,40 @@
 					</div>
 
 					<div class= "col-md-12 col-xs-12" >
-						<a class="btn btn-lg btn-block btn-login" id = "submit" >
+						<a class="btn btn-lg btn_login" id="submit" >
 							OK
+						</a>
+						<a class="btn btn-lg btn_login" id="submit" href="assignment_add.html">
+							CANCEL
 						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<input type = "hidden" id="hiddenAssign" name = "hide" value = "" >
+	<input type = "hidden" id="hiddenAssign" name="hide" value="" >
 	<script type="text/javascript">
 		$(document).ready(function(){
 	     	$('#click').on('click',function(){ //입력한 과목명 가지고 선택할 수 있게 만들어야함.(subNum 받아야함!)
-						$('.addTable').empty(); // .addTable 클래스를 가진항목 지우기(테이블 내용 지우기)
-	   		   	var checkList = [];
+				$('.add_row').empty(); // .add_row 클래스를 가진항목 지우기(테이블 내용 지우기)
+
+				var checkList = [];
 
 	      		event.preventDefault();
 				$.ajax({
 	      			url:"http://localhost:8090//subject/searchSubject.json",
 	      			type : "GET",
-	      			data : {'word':$('#subjectName').val()},
+	      			data : {
+	      				'word':$('#subjectName').val()
+	      			},
 	      			success : function(result){
 	               		if(result['result'] === 'no data'){ //과목 검색 성공
 	               			alert('검색 실패');
 	               		}else{
 	               			alert('검색 성공');
-	               			console.log(result);
-
-	               			console.log(result['result'][0]['subNo']);
-	               			console.log(result['result'].length);
 
 	               			var	tableLen = result['result'].length;
-	               			var table = document.getElementById("table_findSub"),rIndex,cIndex;
+	               			var table = document.getElementById("tableFindSub"),rIndex,cIndex;
 
 	               			var cell = new Array();
 	             	  		for(var i=0 ; i <tableLen ; i++){
@@ -107,18 +111,19 @@
 	               				cell[1] = newRow.insertCell(1),
 	               				cell[2] = newRow.insertCell(2),
 	               				cell[3] = newRow.insertCell(3),
-												cell[4] = newRow.insertCell(4),
+								cell[4] = newRow.insertCell(4),
+								cell[5] = newRow.insertCell(5),
 
+	               				cell[0].innerHTML = i+1;
+	               				cell[1].innerHTML = '<input type="radio" id="radio'+(i+1)+'" name="select" data-sub-no="'+result['result'][i]['subNo']+'">';
+	               				cell[2].innerHTML = result['result'][i]['subName'];
+	               				cell[3].innerHTML = result['result'][i]['startHour'];
+								cell[4].innerHTML = result['result'][i]['classroom'];
+	               				cell[5].innerHTML = result['result'][i]['profName'];
 
-	               				cell[0].innerHTML = '<input type="radio" id="radio'+(i+1)+'" name="select" data-sub-no="'+result['result'][i]['subNo']+'">';
-	               				cell[1].innerHTML = i+1;
-	               				cell[2].innerHTML = result['result'][i]['startHour'];
-												cell[3].innerHTML = result['result'][i]['classroom'];
-	               				cell[4].innerHTML = result['result'][i]['profName'];
-
-	              	 			$(newRow).addClass("stripe-top");
-												$(newRow).addClass("addTable");
-	               				for(var j=0 ; j<5 ; j++)
+	              	 			$(newRow).addClass("stripe_border_top");
+								$(newRow).addClass("add_row");
+	               				for(var j=0 ; j<6 ; j++)
 	               					$(cell[j]).css("border-right","1px solid #e5e5e5");
 	             	  		}
 	             		}
@@ -148,9 +153,9 @@
 		});
 
 		//테이블 클릭하면 행,열의 인덱스 찍어줌
-		var table = document.getElementById("table_findSub"),rIndex,cIndex;
+		var table = document.getElementById("tableFindSub"),rIndex,cIndex;
 
-		$('#table_findSub').on('click', function (){
+		$('#tableFindSub').on('click', function (){
 			for(var i = 1 ; i < table.rows.length ; i++){
 				for(var j = 0 ; j<table.rows[i].cells.length ; j++){
 					table.rows[i].cells[j].onclick = function(){
