--- a/phonegap_front_webApp/www/join.html
+++ b/phonegap_front_webApp/www/join.html
@@ -22,48 +22,48 @@
 	<!-- Container -->
 	<div class="container" id="content">
 		<div class="row justify-content-md-center justify-content-xs-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-				<h1 class="text-center wdi-red">JOIN</h1>
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login_box ">
+				<h1 class="text-center wdi_red">JOIN</h1>
 				<hr>
 				<form>
 					<div class="form-row commonForm">
 
 						<!-- ID lable/input tag -->
-						<div class= "col-md-3 col-xs-3 label">
+						<div class= "col-md-3 col-xs-3 label_input">
 							<h6> ID </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" title="ID" id="id">
+							<input type="text"  class="form-control form-control-lg flat_input" title="ID" id="id">
 						</div>
 
 						<!--PW lable/input tag -->
-						<div class= "col-md-3 col-xs-3 label">
+						<div class= "col-md-3 col-xs-3 label_input">
 							<h6> PW </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="password"  class="form-control form-control-lg flat-input" title="PW" id="pw">
+							<input type="password"  class="form-control form-control-lg flat_input" title="PW" id="pw">
 						</div>
 
 						<!--NAME lable/input tag -->
-						<div class= "col-md-3 col-xs-3 label">
+						<div class= "col-md-3 col-xs-3 label_input">
 							<h6> NAME </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" title="NAME"  id ="name">
+							<input type="text"  class="form-control form-control-lg flat_input" title="NAME"  id ="name">
 						</div>
 
-						<div class= "col-md-3 col-xs-3 label">
+						<div class= "col-md-3 col-xs-3 label_input">
 							<h6> EMAIL </h6>
 						</div>
 						<div class= "col-md-9 col-xs-9">
-							<input type="text"  class="form-control form-control-lg flat-input" title="EMAIL"  id ="email">
+							<input type="text"  class="form-control form-control-lg flat_input" title="EMAIL"  id ="email">
 						</div>
 
 						<!--GRADE lable/Dropdow tag -->
-						<div class= "col-md-3 col-xs-3 label">
+						<div class= "col-md-3 col-xs-3 label_input">
 							<h6> YEAR </h6>
 						</div>
-						<div class="container col-md-3 col-xs-3 dropdown-grade">
+						<div class="container col-md-3 col-xs-3 dropdown_semester">
 							<select class="form-control" id="semester">
 								<option>1</option>
 								<option>2</option>
@@ -75,11 +75,11 @@
 
 						<!--join/cancel button -->
 						<div class= "col-md-6 col-xs-6 btns">
-							<button class="btn btn-sm btn-block btn-join" id="joinbtn">
+							<button class="btn btn-sm btn-block btn_join" id="btnJoin">
 							JOIN</button>
 						</div>
 						<div class= "col-md-6 col-xs-6 btns">
-							<a class="btn btn-sm btn-block btn-cancel" href="index.html">
+							<a class="btn btn-sm btn-block btn_cancel" href="index.html">
 							CANCEL</a>
 						</div>
 
@@ -90,7 +90,7 @@
 	</div>
 	<script type="text/javascript">
 		$(document).ready(function(){
-			$('#joinbtn').on('click',function(){
+			$('#btnJoin').on('click',function(){
 
 				if( !chkInput() ) {
 					return;
