한글깨짐 수정 계속 깨지면 이클립스 설정하면 됨!!

--- a/phonegap_front_webApp/platforms/android/app/src/main/assets/www/assignment_add.html
+++ b/phonegap_front_webApp/platforms/android/app/src/main/assets/www/assignment_add.html
@@ -53,37 +53,37 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 	<!-- Container -->
 	<div class="container" data-spy = "scroll">
 		<div class="row justify-content-md-center justify-content-xs-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box  p-md-0 ">
-				<h2 class="text-center wdi-red mt-1">ADD ASSINGMENT</h2>
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login_box  p-md-0 ">
+				<h2 class="text-center wdi_red mt-1">ADD ASSINGMENT</h2>
 				<hr class="m-1">
 				<form class="commonForm">
 					<div class="form-row m-3">
-						<div class= "col-md-3 col-xs-3 my-2 label">
+						<div class= "col-md-3 col-xs-3 my-2 label_input">
 							과목명
 						</div>
 						<div class= "col-md-7 col-xs-7 ">
-							<input type="text"  class="form-control form-control-sm mt-1 mb-1  flat-input" id="subjectName" title="과목명">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1  flat_input" id="subjectName" title="과목명">
 						</div>
 						<div class= "col-md-2 col-xs-2 mt-1 mb-1">
-							<a  class="btn btn-sm btn-icon" aria-label="Left Align" href="find_subject.html">
+							<a  class="btn btn-sm btn_icon" aria-label="Left Align" href="find_subject.html">
 								<span class="fas fa-search"></span>
 							</a>
 						</div>
-						<div class= "col-md-3 col-xs-3 my-2 label">
+						<div class= "col-md-3 col-xs-3 my-2 label_input">
 							제목
 						</div>
 						<div class= "col-md-7 col-xs-7">
-							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" title="제목" id="title">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat_input" title="제목" id="title">
 						</div>
 
-						<div class= "col-md-3 col-xs-3 my-2 label">
+						<div class= "col-md-3 col-xs-3 my-2 label_input">
 							내용
 						</div>
 						<div class= "col-md-7 col-xs-7">
-							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat-input" title="내용" id="contents">
+							<input type="text"  class="form-control form-control-sm mt-1 mb-1 flat_input" title="내용" id="contents">
 						</div>
 
-						<div class= "col-md-3 col-xs-3 my-2 label">
+						<div class= "col-md-3 col-xs-3 my-2 label_input">
 							중요도
 						</div>
 						<span class="star-input col-md-7 col-xs-7 ">
@@ -101,7 +101,7 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 							</span>
 						</span>
 
-						<div class= "col-md-3 col-xs-3 my-2 label">
+						<div class= "col-md-3 col-xs-3 my-2 label_input">
 							마감일
 						</div>
 						<div class= "col-md-6 col-xs-6 mt-1 mb-1">
@@ -114,13 +114,13 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 
 						<!--join/cancel button -->
 						<div class= "col-md-6 col-xs-6">
-							<button class="btn btn-sm btn-block btn-submit" id="submit">
+							<button class="btn btn-sm btn-block btn_submit" id="submit">
 								SUBMIT
 							</button>
 						</div>
 
 						<div class= "col-md-6 col-xs-6">
-							<a class="btn btn-sm btn-block btn-cancel" href="assignment.html">
+							<a class="btn btn-sm btn-block btn_cancel" href="assignment.html">
 								CANCEL
 							</a>
 						</div>
@@ -141,17 +141,25 @@ star-input>.input.focus{outline:1px dotted #ddd;}
 	$(document).ready(function(){
 		$('#submit').on('click',function(){
 
-			// if( !chkInput() ) return;
+			if( !chkInput() ) return;
+
+			event.preventDefault();
 
 			var radioVal = $('input[name="star-input"]:checked').val();
 			var due = $('#dueDate').val();
-
+			
 			$.ajax({
 				url:"http://localhost:8090/homework/insertHomework.json",
 				type : "GET",
-				data : {'stuId':'1','importance':radioVal,'dueDate':due,
-				'title':$('#title').val(), 'contents':$('#contents').val()
-				,'success':0, 'subNo':'111'},
+				data : {
+					'stuId':'1',
+					'importance':radioVal,
+					'dueDate':due,
+					'title':$('#title').val(),
+					'contents':$('#contents').val(),
+					'success':0,
+					'subNo':'111'
+				},
 				success : function(result){
 					console.log(result);
 	               if(result['result'] === '1'){ //과제 등록 성공
