--- a/phonegap_front_webApp/platforms/android/app/src/main/assets/www/changePW.html
+++ b/phonegap_front_webApp/platforms/android/app/src/main/assets/www/changePW.html
@@ -11,7 +11,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   <!-- Customize CSS -->
-  <link rel="stylesheet" type="text/css" href="${pageContext.request.contextPath}/resources/css/style_changePW.css">
+  <link rel="stylesheet" type="text/css" href="css/style_changePW.css">
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -41,10 +41,10 @@
            </div>
             <div class= "col-md-12 col-xs-12 mt-3 ">
               <button class="btn btn-md btn_submit mx-0" id="submit" >
-          		     확인
+                확인
               </button>
-              <button type="button" class="btn btn-md btn_cancel mx-0" id="cancel" onclick="location.href='/mypage'">
-          		      취소
+              <button type="button" class="btn btn-md btn_cancel mx-0" id="cancel" onclick="location.href='mypage.html'">
+                취소
               </button>
             </div>
 
@@ -53,7 +53,7 @@
             </div>
             <div class= "col-md-12 col-xs-12" >
               <a class="btn btn-lg btn-block btn_submit" id="change" style="display:none;">
-              	  변경
+                변경
               </a>
             </div>
           </div>
@@ -65,7 +65,7 @@
     $(document).ready(function() {
       $('#submit').on('click', function() { //해당 아이디의 비밀번호와 입력된 비번이 같은지 확인
         $.ajax({
-          url: "/user/checkUser.json",
+          url: "http://localhost:8090/user/checkUser.json",
           type: "GET",
           data: {
             'stuId':$('#id').val(),
@@ -87,18 +87,18 @@
         });
       });
 
-      $('#change').on('click', function() {  //해당 아이디의 비밀번호와 입력된 비번이 같은지 확인
+      $('#change').on('click', function() { //해당 아이디의 비밀번호와 입력된 비번이 같은지 확인
         $.ajax({
           url: "http://localhost:8090/user/updatePW.json",
           type: "GET",
           data: {'stuId':$('#id').val(), 'pw':$('#rePw').val()},
           success: function(result) {
             console.log(result);
-            if (result['result'] === "1") {
+            if (result['result'] === "1") { //회원정보 없음
               alert("비밀번호 변경 성공");
-              location.href = "/mypage";
-            } else {//회원정보 없음
-              alert("비밀번호 변경 실패");
+              location.href = "mypage.html";
+            } else {
+              alert("비밀번호 변경 성공");
             }
           },
           error: function() {
