--- a/phonegap_front_webApp/platforms/android/app/src/main/assets/www/timetable_page.html
+++ b/phonegap_front_webApp/platforms/android/app/src/main/assets/www/timetable_page.html
@@ -26,47 +26,47 @@
 	<!-- Container -->
 	<div class="container">
 		<div class="row justify-content-md-center justify-content-xs-center justify-content-sm-center justify-content-lg-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login_box ">
 				<!-- header (상단바) class="app-header" -->
 				<div id="header">
 				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-0 m-0 main-area">
+				<div class="jumbotron p-md-0 m-0 main_area">
 					<!-- + 버튼  -->
 					<div class="row col-auto justify-content-end setting">
 						<div class= "col-10 col-xs-10 col-sm-10 col-lg-10 col-md-10"></div>
-						<button class="btn-lg btn-add p-0 mx-2 upperbarCollapse" type="button" data-toggle="collapse" data-target="#collapseAdd" aria-label="Left Align" aria-expanded="false" aria-controls="collapseAdd">
+						<button id="plusTime" class="btn-lg btn_add p-0 mx-2" type="button" data-toggle="collapse" data-target="#collapseAdd" aria-label="Left Align" aria-expanded="false" aria-controls="collapseAdd">
 							<span class="fas fa-plus-square"></span>
 						</button>
 					</div>
 
 					<!-- +버튼 클릭시 추가 창 띄움-->
 					<div id="collapseAdd" class="collapse p-0 md-1 col-12 col-xs-12 col-sm-12 col-lg-12 col-md-12">
-						<div id="topbar" class="card card-body card-plus">
+						<div id="topbar" class="card card-body card_plus">
 							<div class="list-group">
 
-								<button id="add-by-directly" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseDirect" aria-expanded="false" aria-controls="collapseDirect">직접 추가하기</button>
-								<button id="add-by-searching" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseSearching" aria-expanded="false" aria-controls="collapseSearching">검색하기</button>
-								<button type="button" id="btn-undo2" class="p-1 btn-sm list-group-item">취소하기</button>
+								<button id="addByDirectly" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseDirect" aria-expanded="false" aria-controls="collapseDirect">직접 추가하기</button>
+								<button id="addBySearching" class="btn p-1 btn-sm list-group-item" type="button" data-toggle="collapse" data-target="#collapseSearching" aria-expanded="false" aria-controls="collapseSearching" href="find_subject.html">검색하기</button>
+								<button type="button" id="btnUndo2" class="p-1 btn-sm list-group-item">취소하기</button>
 							</div>
 
 							<!-- 직접 추가하기 창 -->
 							<div class="collapse mt-1 form-add" id="collapseDirect">
-								<div class="card card-body card-directly p-2">
+								<div class="card card-body card_directly p-2">
 									<form class="commonForm">
 										<div class="form-group m-0">
-											<label for="subjectName" class="col-12 label">과목명</label>
+											<label for="subjectName" class="col-12 label_input">과목명</label>
 											<input type="text" class="form-control input" title="과목명" id="subjectName">
 										</div>
 										<div class="form-group m-0">
-											<label for="professorName" class="col-12 label" >교수명</label>
+											<label for="professorName" class="col-12 label_input" >교수명</label>
 											<input type="text" class="form-control input" title="교수명" id="professorName">
 										</div>
 										<div class="form-group m-0">
-											<label for="time" class="col-12 label">시간</label>
+											<label for="time" class="col-12 label_input">시간</label>
 											<div id="time" class="col-12 form-row">
-												<label class="mx-auto time-label">요일</label>
+												<label class="mx-auto time_label">요일</label>
 												<div class="mx-auto">
 													<select id="day1" class="form-control-xs">
 														<option value="">요일</option> 
@@ -86,7 +86,7 @@
 														<option value="fri">fri</option> 
 													</select>
 												</div>
-												<label class="mx-auto time-label">시작시간</label>
+												<label class="mx-auto time_label">시작시간</label>
 												<div class="mx-auto">
 													<select id="sHour" class="form-control-xs">
 														<option value="">시</option> 
@@ -131,19 +131,15 @@
 											</div>
 										</div>
 										<div class="form-group m-0">
-											<label for="place" class="col-12 label">장소</label>
+											<label for="place" class="col-12 label_input">장소</label>
 											<input type="text" class="form-control input" title="장소" id="place">
 										</div>
 									</form>
-									<div class="form-row mx-auto btn-submit">
-										<button type="button" id="btn-success" class="mx-auto col-5 btn btn-sm btn-addSub">추가</button>
-										<button type="button" id="btn-undo1" class="mx-auto col-5 btn btn-sm btn-addSub">취소</button>
+									<div class="form-row mx-auto btn_submit">
+										<button type="button" id="btnSuccess" class="mx-auto col-5 btn btn-sm btn_add_sub">추가</button>
+										<button type="button" id="btnUndo1" class="mx-auto col-5 btn btn-sm btn_add_sub">취소</button>
 									</div>
 								</div>
-							</div>
-
-							<!-- 검색하기 창 -->
-							<div class="collapse mt-1 form-add" id="collapseSearching">
 							</div>
 
 						</div>
@@ -168,21 +164,27 @@
 
 	<!-- 취소하기 버튼 클릭 시 다시 창 닫기 -->
 	<script type="text/javascript">
-		$('#btn-undo2').on('click', function () {
-			$('.upperbarCollapse').trigger('click');
-			$('#add-by-directly').trigger('click');
+		$('#btnUndo2').on('click', function () {
+			$('#plusTime').trigger('click');
+			$('#collapseDirect').collapse('hide');
+			
+		});
+		$('#plusTime').on('click', function () {
+			$('#collapseDirect').collapse('hide');
+			$('#collapseAdd').collapse('hide');
+			
 		});
 
-		$('#btn-undo1').on('click', function () {
-			$('#add-by-directly').trigger('click');
+		$('#btnUndo1').on('click', function () {
+			$('#addByDirectly').trigger('click');
 		});
 	</script>
 
 	<!--select box 선택 값 가져오기 -->
 	<script>
-		$('#btn-success').on('click', function () {
+		$('#btnSuccess').on('click', function () {
 
-			// if( !chkInput() ) return;
+			if( !chkInput() ) return;
 
 			var shour = document.getElementById("sHour");
 			var val_shour = shour.options[shour.selectedIndex].value;
@@ -258,17 +260,16 @@
 			// select box value init
 			$('select').find("option:eq(0)").prop("selected", true);
 
-			$('#add-by-directly').trigger('click');
-			$('.upperbarCollapse').trigger('click');
+			$('#addByDirectly').trigger('click');
+			$('#plusTime').trigger('click');
 		});
 	</script>
-
 
 	<!-- 테이블 클릭 시 수정 -->
 	<script>
 		var table = document.getElementById("table"),rIndex,cIndex;
 
-		$('#btn-success').on('click', function (){
+		$('#btnSuccess').on('click', function (){
 			for(var i = 1 ; i < table.rows.length ; i++){				
 				for(var j = 1 ; j<table.rows[i].cells.length ; j++){
 					table.rows[i].cells[j].onclick = function(){
