--- a/phonegap_front_webApp/platforms/browser/www/findPW.html
+++ b/phonegap_front_webApp/platforms/browser/www/findPW.html
@@ -10,7 +10,7 @@
    <!-- Bootstrap CSS -->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
    <!-- Customize CSS -->
-   <link rel="stylesheet" type="text/css" href="css/style_index.css">
+   <link rel="stylesheet" type="text/css" href="css/style_changePW.css">
 
    <!-- Optional JavaScript -->
    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -25,30 +25,27 @@
 <!-- Container -->
 <div class="container" id="content">
    <div class="row justify-content-md-center justify-content-xs-center">
-      <div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login-box ">
-         <h1 class="text-center wdi-red">PW</h1>
+      <div class="col-md-6 col-md-auto col-xs-6 col-xs-auto login_box ">
+         <h1 class="text-center wdi_red">PW</h1>
          <hr>
          <form>
             <div class="form-row">
 
-               <!-- input id, pw -->
                <div class= "col-md-12 col-xs-12">
-                  <input type="text" id="id" class="form-control form-control-lg flat-input" placeholder="username">
+                  <input type="text" id="id" class="form-control form-control-lg flat_input" placeholder="username">
                </div>
+               <!-- 이건 뭐야...???
                <div class= "col-md-6 col-xs-6">
                   <a id="pw"></a>
                </div>
-
-               <!-- login/join/find pw button-->
-               <div class= "col-md-12 col-xs-12" >
-                 <a class="btn btn-sm btn-block btn-cancel" id = "submit" >
-                 FIND
-                 </a>
-               </div>
-               <div class= "col-md-12 col-xs-12">
-                 <a class="btn btn-sm btn-block btn-cancel" href="index.html">
-                 CANCEL
-                 </a>
+-->
+               <div class= "col-md-12 col-xs-12 mt-3" >
+                  <button type="button" class="btn btn-md col-md-5 btn_submit" id="submit" >
+                  FIND
+                 </button>
+                 <button type="button" class="btn btn-md col-md-5 btn_cancel" onclick='location.href="index.html"'>
+                  CANCEL
+                 </button>
                </div>
 
             </div>
@@ -56,6 +53,8 @@
       </div>
    </div>
 </div>
+<input type = "hidden" id="email" name="hide" value="" >
+<input type = "hidden" id="to_pw" name="hide" value="" >
 <script type="text/javascript">
    $(document).ready(function(){
       $('#submit').on('click',function(){
@@ -64,11 +63,27 @@
             type : "GET",
             data : {'stuId':$('#id').val()},
             success : function(result){
-               console.log(result);
                if(result['result'] === "no data"){ //회원정보 없음
                   alert('회원정보가 없습니다.');
-               }else{
-                  alert("비밀번호 : "+result['result']);
+               }else{//회원정보가 존재함!
+                 $('#email').val(result['email']).trigger('change');
+                 $('#to_pw').val(result['pw']).trigger('change');
+
+                  $.ajax({
+                    type:"post",
+                    url : "content_me.php",
+                    success : function(result){
+                      if(result){
+                        alert("메일이 전송되었습니다.");
+                      }
+                      else{
+                        alert("메일이 전송되지 않았습니다.");
+                      }
+                    },
+                    error : function(){
+                      alert("php에 접근하지 못하였습니다.");
+                    }
+                  });
                }
             },
             error : function(){
