--- a/phonegap_front_webApp/platforms/browser/www/menu.html
+++ b/phonegap_front_webApp/platforms/browser/www/menu.html
@@ -26,14 +26,14 @@
 	<!-- Container -->
 	<div class="container">
 		<div class="row justify-content-md-center justify-content-xs-center row justify-content-sm-center justify-content-lg-center">
-			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+			<div class="col col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login_box ">
 
 				<!-- header (상단바)-->
 				<div id="header">
 				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-md-3 text-white rounded main-area">
+				<div class="jumbotron p-md-3 text-white rounded main_area">
 
 				</div>
 
