--- a/phonegap_front_webApp/platforms/browser/www/mypage.html
+++ b/phonegap_front_webApp/platforms/browser/www/mypage.html
@@ -26,16 +26,16 @@
 	<!-- Container -->
 	<div class="container">
 		<div class="row justify-content-md-center justify-content-xs-center justify-content-sm-center justify-content-lg-center">
-			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login-box ">
+			<div class="col-md-6 col-md-auto col-xs-6 col-xs-auto col-sm-6 col-sm-auto col-lg-6 col-lg-auto login_box ">
 
 				<!-- header (상단바) class="app-header" -->
 				<div id="header">
 				</div>
 
 				<!-- 상단바와 하단바를 제외한 부분 class="main-area" -->
-				<div class="jumbotron p-0 rounded main-area">
+				<div class="jumbotron p-0 rounded main_area">
 					<div class="d-flex align-items-center p-3 my-3 rounded" style="background: #f2f2f2;">
-						<i class="fas fa-user m-3 user-icon"></i>
+						<i class="fas fa-user m-3 user_icon"></i>
 						<div class="lh-100">
 							<h6 class="mb-0 lh-100 info">정주호(이름!!)</h6>
 							<small class="info">16011016(학번!!)</small>
@@ -43,10 +43,10 @@
 					</div>
 
 					<div class="list-group">
-						<button class="btn p-1 btn-sm list-group-item" type="button">정보 수정</button>
-						<button class="btn p-1 btn-sm list-group-item" type="button">비밀번호 변경</button>
-						<button type="button" class="p-1 btn-sm list-group-item">알림 끄기</button>
-						<button type="button" class="p-1 btn-sm list-group-item">탈퇴</button>
+						<button id="updateInfo"class="btn p-1 btn-sm list-group-item" type="button"  onclick="location.href='update_information.html'">정보 수정</button>
+						<button class="btn p-1 btn-sm list-group-item" type="button" onclick="location.href='changePW.html'">비밀번호 변경</button>
+						<button class="btn p-1 btn-sm list-group-item" type="button">알림 끄기</button>
+						<button id='secession' class="btn p-1 btn-sm list-group-item" type="button">탈퇴</button>
 					</div>
 				</div>
 
